ci/policy-tests/kyverno/baseline/disallow-host-process/pod-hostprocess-true-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hostprocess-workload
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    securityContext:
      windowsOptions:
        hostProcess: true
