ci/policy-tests/kyverno/baseline/disallow-host-process/pod-level-hostprocess-true-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-level-hostprocess-workload
  namespace: default
spec:
  restartPolicy: Always
  securityContext:
    windowsOptions:
      hostProcess: true
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
